# bget

./: .gitignore  LICENSE  README.md  clear_all.bat  config-example.toml  make.py  makefile.yaml  pyproject.toml  requirements.txt  setup.py
bgetcli/: bget.py  const.py  downloader.py  logger.py  model.py  runtime.py  utils.py
