[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bget = 'bgetcli.bget:main'

[tool.poetry]
name = "bget"
version = "10.1.0"
description = "bget - a python bilibili favourites batch downloader"
authors = ["Joseph Chris <joseph@josephcz.xyz>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bilibili", "terminal"]
homepage = "https://github.com/baobao1270/bget"
repository = "https://github.com/baobao1270/bget.git"
packages = [
    { include = "bgetcli" }
]
include = ["LICENSE", "config-example.toml"]

[tool.poetry.dependencies]
python = "^3.8"
toml = ">=0.10.2"
bgetlib = ">=3.2.7"
